Revert "Further avoid content shifting"
This reverts commit 748fa718cb35cb737023289e232d1f833291af75.

--- a/style.css
+++ b/style.css
@@ -651,7 +651,3 @@ header {
 .grid-cols-3 > div.ingress-card {
   min-height: 110px;
 }
-
-#table-card {
-  min-height: 480px;
-}
